<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.salihkinali.feature.detail.DetailFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/addBasketButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/cardview_dark_background">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/productImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_weight="0.15"
            tools:background="@color/cardview_light_background" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/productTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/title_text"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            tools:background="#9C27B0"
            tools:text="@string/example_ipsum" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/stockCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/line"
            android:text="@string/stock_count"
            android:textSize="@dimen/stock_text"
            android:textStyle="bold" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/productDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/description_size"
            android:layout_weight="0.55"
            android:textSize="@dimen/description_text_size"
            tools:background="#3F51B5"
            tools:text="@string/example_ipsum" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/minusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:text="@string/minus"
                tools:background="@color/basket_button" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/productPieceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_number" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:text="@string/plus"
                tools:background="@color/basket_button" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/productPriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tools:text="@string/example_number" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addBasketButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/basket_button"
        android:gravity="center"
        android:padding="@dimen/button_padding"
        android:text="@string/add_to_basket"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutCompat" />
</androidx.constraintlayout.widget.ConstraintLayout>